RESOLVED FIXED108291
[Mac] REGRESSION(r140974): accessibility/lists.html fails on Lion
https://bugs.webkit.org/show_bug.cgi?id=108291
Summary [Mac] REGRESSION(r140974): accessibility/lists.html fails on Lion
Ryosuke Niwa
Reported 2013-01-29 21:30:39 PST
Fails with the following diff: --- /Volumes/Data/slave/lion-release-tests-wk1/build/layout-test-results/accessibility/lists-expected.txt +++ /Volumes/Data/slave/lion-release-tests-wk1/build/layout-test-results/accessibility/lists-actual.txt @@ -69,7 +69,7 @@ ------------ AXRole: AXList AXSubrole: AXDescriptionList -AXRoleDescription: list +AXRoleDescription: AXList:AXDescriptionList AXChildren: <array of size 5> AXHelp: AXParent: <AXList>
Attachments
patch (3.52 KB, patch)
2013-01-30 12:50 PST, chris fleizach
rniwa: review+
buildbot: commit-queue-
Ryosuke Niwa
Comment 1 2013-01-29 21:38:02 PST
Added a failing test expectation in http://trac.webkit.org/changeset/141220.
James Craig
Comment 2 2013-01-30 00:08:43 PST
Actually I think we’d just want to replace the Lion expectation.txt file with the new actual results.
James Craig
Comment 3 2013-01-30 00:11:20 PST
Never mind the previous comment, I read the diff backwards.
chris fleizach
Comment 4 2013-01-30 08:34:39 PST
(In reply to comment #3) > Never mind the previous comment, I read the diff backwards. It looks like the problem is that we don't explicitly return the role description for a descriptionList, instead relying on the NSAccessibility method to return one and in Lion it returns the role:subrole, and above that it returns what the role's description would be ignoring the subrole. i think we should mimic that behavior in WebCore otherwise, we'll get this unwieldy role description on lion
chris fleizach
Comment 5 2013-01-30 12:50:37 PST
chris fleizach
Comment 6 2013-01-30 12:50:57 PST
couldn't actually test this since i don't have a Lion machine, but it looks correct to me
Ryosuke Niwa
Comment 7 2013-01-30 13:00:29 PST
(In reply to comment #6) > couldn't actually test this since i don't have a Lion machine, but it looks correct to me I do have a Lion machine at home so let me test on that when I get home tonight.
Build Bot
Comment 8 2013-01-30 14:13:57 PST
Comment on attachment 185540 [details] patch Attachment 185540 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://queues.webkit.org/results/16195878 New failing tests: platform/mac/fast/speechsynthesis/speech-synthesis-voices.html
chris fleizach
Comment 9 2013-01-30 16:19:48 PST
Comment on attachment 185540 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=185540&action=review > LayoutTests/platform/mac/TestExpectations:192 > +# platform/mac/fast/speechsynthesis whoops obviously did not mean to enable that. will remove this line if this patch is r+
Ryosuke Niwa
Comment 10 2013-01-31 22:46:29 PST
Comment on attachment 185540 [details] patch Confirmed that the list.html passes on Lion.
chris fleizach
Comment 11 2013-02-01 01:14:06 PST
huzzah! thanks for taking the time to confirm
chris fleizach
Comment 12 2013-02-01 01:19:05 PST
Note You need to log in before you can comment on or make changes to this bug.