Source/WebCore: [Mac] REGRESSION(r140974): accessibility/lists.html fails on Lion= https://bugs.webkit.org/show_bug.cgi?id=108291

Reviewed by Ryosuke Niwa.

This accounts for differences in what AppKit gives for accessibility role descriptions between platforms
when the subrole is not recognized, and standardizes it for WebKit.

Unskip a failing Lion test

* accessibility/mac/WebAccessibilityObjectWrapper.mm:
(-[WebAccessibilityObjectWrapper roleDescription]):

LayoutTests: [Mac] REGRESSION(r140974): accessibility/lists.html fails on Lion
https://bugs.webkit.org/show_bug.cgi?id=108291

Reviewed by Ryosuke Niwa.

* platform/mac/TestExpectations:



Canonical link: https://commits.webkit.org/126824@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141559 268f45cc-cd09-0410-ab3c-d52691b4dbfc